<resources>
    <string name="app_name">1818</string>
    <string name="s_b_d">S B D</string>
    <string name="title_s_b_d">S B D</string>
    <string name="알림">알림</string>
    <string name="_1_500">1520/6000</string>
    <string name="todo4">head</string>
    <string name="todo5">neck</string>
    <string name="충전">충전</string>
    <string name="gage50">gage50</string>
    <string name="todo6">todo1</string>
    <string name="todo7">todo7</string>
    <string name="recovery_chase">recovery_chase</string>
    <string name="todo9">todo9</string>
    <string name="recovery_adobeman">recovery_adobeman</string>
    <string name="_50">50</string>
    <string name="weightlifting">weight</string>

    <string name="order_id_mock" translatable="false">SBD</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="push" translatable="false">COUNT</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="fatigue" translatable="false">피로도</string>
    <string name="recent_routin" translatable="false">최근 루틴</string>
    <string name="runtime" translatable="false">소요 시간</string>
    <string name="record" translatable="false">측정하기</string>
    <string name="min" translatable="false">분</string>
    <string name="kg" translatable="false">KG</string>
    <string name="count" translatable="false">회</string>
    <string name="percent" translatable="false">%</string>
    <string name="set" translatable="false">SET</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="account_balance">Account Balance</string>
    <string name="balance_currency">$</string>
    <string name="balance_amount">524.99</string>
    <string name="routin1">routin1</string>
</resources>
