<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <!-- LEFT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="3"
        android:background="@color/teal_67"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/part_of_muscle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_time_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


    </RelativeLayout>
    <!-- RIGHT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bgTitleRight"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/title_from_to_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/from_to_purple" />

        <TextView
            android:id="@+id/fatigue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:layout_toRightOf="@+id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/fatigue"
            />
        <TextView
            android:id="@+id/fatigue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="80dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:layout_toRightOf="@+id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/fatigue"
            android:layout_toRightOf="@+id/fatigue"
            android:layout_marginStart="5dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/percent"

            />

        <ImageView
            android:id="@+id/title_from_to_dots_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/fatigue"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:layout_toRightOf="@+id/title_from_to_dots"
            android:src="@color/contentDividerLine" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_from_to_dots_divider"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/runtime"
            />

        <TextView
            android:id="@+id/spend_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_from_to_dots_divider"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_marginStart="80dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_from_to_dots_divider"
            android:layout_toEndOf="@id/spend_time"
            android:layout_toRightOf="@id/spend_time"
            android:layout_marginStart="5dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/min"
            />


        <TextView
            android:id="@+id/set_count"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/set_count"
            android:layout_alignTop="@+id/set_count"
            android:layout_marginStart="5dp"
            android:text="@string/count"
            />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/set_count"
            android:layout_alignLeft="@id/set_count"
            android:layout_alignStart="@id/set_count"
            android:text="@string/set" />

        <TextView
            android:id="@+id/title_weight"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="205dp"

            />


        <TextView
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/title_weight"
            android:layout_alignTop="@+id/title_weight"
            android:layout_marginStart="5dp"
            android:text="@string/kg"
            />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_weight"
            android:layout_alignStart="@id/title_weight"
            android:layout_alignLeft="@id/title_weight"
            android:layout_marginBottom="0dp"
            android:text="@string/weight_badge" />

        <TextView
            android:id="@+id/count_numberic"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="105dp" />

        <TextView
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/count_numberic"
            android:layout_alignTop="@+id/count_numberic"
            android:layout_marginStart="5dp"
            android:text="@string/count"
            />



        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/count_numberic"
            android:layout_alignLeft="@id/count_numberic"
            android:layout_alignStart="@id/count_numberic"
            android:text="@string/push" />

    </RelativeLayout>
</LinearLayout>