<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="90dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/account_balance"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/balance_currency" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_amount"
            android:textSize="34sp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="56dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:outlineAmbientShadowColor="@color/lime_green"
                android:outlineSpotShadowColor="@color/lime_green"
                android:src="@drawable/ic_home"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="홈 화면"

                />


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:outlineAmbientShadowColor="@color/lime_green"
                android:outlineSpotShadowColor="@color/lime_green"
                android:src="@drawable/ic_alarm"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="홈 화면"

                />


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:outlineAmbientShadowColor="@color/lime_green"
                android:outlineSpotShadowColor="@color/lime_green"
                android:src="@drawable/ic_home"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="홈 화면"

                />


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:outlineAmbientShadowColor="@color/lime_green"
                android:outlineSpotShadowColor="@color/lime_green"
                android:src="@drawable/ic_home"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="홈 화면"

                />


        </LinearLayout>


    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

</LinearLayout>